--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,35 @@
 name: CI
 
 on:
-  pull_request:
   push:
-    branches: [main]
+  pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  ci:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
-          node-version-file: .nvmrc
+          node-version: "22"
           cache: npm
-
-      - run: node -v && npm -v
-
-      - run: npm i -g npm@11.6.2
-      - run: npm -v
-
       - run: npm ci
-      - name: Ensure lockfile unchanged
-        run: git diff --exit-code -- package-lock.json
       - run: npm run validate
       - run: npm test
       - run: npm run smoke:wf_cycle
+
+  pult-smoke:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: npm
+      - run: npm ci
+      - run: npm ci --prefix pults/inngest_wf_cycle_v0
+      - run: npm run smoke:pult
