--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
 
   pult-smoke:
     runs-on: ubuntu-latest
+    env:
+      PULT_SMOKE_KILL_STRAY: "1"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
