--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "lab:init": "node tools/lab_init.mjs",
     "lab:memory:init": "node tools/lab_memory.mjs init",
     "lab:memory:import": "node tools/lab_memory.mjs import",
-    "lab:memory:query": "node tools/lab_memory.mjs query"
+    "lab:memory:query": "node tools/lab_memory.mjs query",
+    "flashslot:publish": "node packs/flashslot_v0/runtime/impl/publish_offer_v0.mjs",
+    "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs"
   },
   "dependencies": {
     "sql.js": "^1.9.0"
