--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run validate && node skills/skill_ingest_run_with_skillseeker_basic/tests/run_tests.js && node skills/skill_ingest_store_episode_basic/tests/run_tests.js && node skills/skill_mova_ai_bootstrap_generate_basic/tests/run_tests.js && node lab/tools/tests/mova_ai_bootstrap_apply_profile.test.js && node skills/skill_file_cleanup_snapshot_node_basic/tests/run_tests.js && node skills/skill_file_cleanup_plan_node_basic/tests/run_tests.js",
     "smoke:wf_cycle": "node tools/wf_cycle_smoke_ci.mjs",
     "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs",
+    "smoke:flashslot:pack": "node tools/flashslot_pack_smoke_ci.mjs",
     "smoke:pult": "node tools/pult_inngest_smoke_ci.mjs",
     "opencode:up": "docker compose --env-file executors/opencode_server_v1/docker/.env -f executors/opencode_server_v1/docker/docker-compose.yml up -d",
     "opencode:down": "docker compose -f executors/opencode_server_v1/docker/docker-compose.yml down -v",
