--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mova_skills_lab",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "validate": "node tools/validate_lab.js",
@@ -39,6 +39,7 @@
     "lab:memory:query": "node tools/lab_memory.mjs query",
     "flashslot:publish": "node packs/flashslot_v0/runtime/impl/publish_offer_v0.mjs",
     "flashslot:experiment": "node tools/flashslot_experiment_cli.mjs",
+    "demo:flashslot": "node tools/flashslot_demo.mjs",
     "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs",
     "smoke:flashslot:experiment": "node tools/flashslot_experiment_smoke_ci.mjs"
   },
