--- a/lab/examples/ds.lab_workflow_episode_data_v1.WF_EX_011_smartlink_4_1_1_apply_codex.json
+++ b/lab/examples/ds.lab_workflow_episode_data_v1.WF_EX_011_smartlink_4_1_1_apply_codex.json
@@ -26,18 +26,18 @@
     },
     "changes_summary": {
       "ds.smartlink.redirect_event.v1": [
-        "Codex: core розділено на link/decision/routing/context; маркетинг зведено у traffic; debug опційний."
+        "Codex: core split into link/decision/routing/context; marketing folded into traffic; debug optional."
       ],
       "env.smartlink.redirect_event.v1": [
-        "Codex: inputs context+decision+debug_mode, опційне додавання debug блока."
+        "Codex: inputs context + decision + debug_mode, optional debug block."
       ],
       "global.smartlink.v1": [
-        "Codex: мінімальна глобальна модель events/text_channels, лише smartlink.redirected."
+        "Codex: minimal global model for events/text_channels, only smartlink.redirected."
       ],
       "meta.smartlink.v1": [
-        "Codex: пакет observability, посилання на власні ds/env/global, scope лише redirect event."
+        "Codex: observability package with references to its ds/env/global, scope limited to redirect event."
       ]
     },
-    "notes_from_operator": "Codex варіант observability застосований окремо від ChatGPT baseline; core SmartLink з WF_EX_010 не змінювався."
+    "notes_from_operator": "Codex observability variant applied separately from the ChatGPT baseline; core SmartLink from WF_EX_010 was not changed."
   }
 }
