--- a/skills/skill_ingest_run_with_skillseeker_basic/manifest.skill.json
+++ b/skills/skill_ingest_run_with_skillseeker_basic/manifest.skill.json
@@ -1,7 +1,7 @@
 {
   "skill_id": "skill.skill_ingest_run_with_skillseeker_basic",
   "title": "Skill Seeker ingest run (basic)",
-  "description": "Запускает Skill Seeker по env.skill_ingest_run_request_v1 и возвращает ds.skill_ingest_run_result_v1.",
+  "description": "Runs Skill Seeker for env.skill_ingest_run_request_v1 and returns ds.skill_ingest_run_result_v1.",
   "mova_core_version": "4.0.0-core-draft-1",
   "uses_ds": [
     "ds.skill_ingest_source_config_v1",
@@ -25,7 +25,7 @@
   ],
   "episode_policy": {
     "mode": "none",
-    "notes": "Эпизоды не записываются этим скиллом напрямую; запись выполняет отдельный skill_ingest_store_episode_basic."
+    "notes": "Episodes are not written directly by this skill; persistence is handled by skill_ingest_store_episode_basic."
   },
   "created_at": "2025-12-05T00:00:00Z",
   "updated_at": "2025-12-05T00:00:00Z"
