--- a/skills/skill_ingest_store_episode_basic/manifest.skill.json
+++ b/skills/skill_ingest_store_episode_basic/manifest.skill.json
@@ -1,7 +1,7 @@
 {
   "skill_id": "skill.skill_ingest_store_episode_basic",
   "title": "Skill Seeker ingest episode store (basic)",
-  "description": "Сохраняет ds.episode_skill_ingest_run_v1 в файловом genetic-хранилище лаборатории.",
+  "description": "Persists ds.episode_skill_ingest_run_v1 in the lab’s genetic file store.",
   "mova_core_version": "4.0.0-core-draft-1",
   "uses_ds": [
     "ds.episode_skill_ingest_run_v1"
@@ -23,7 +23,7 @@
   ],
   "episode_policy": {
     "mode": "none",
-    "notes": "Сам скилл записывает эпизод в файловую систему и не создаёт новый episode_v1."
+    "notes": "This skill writes the episode to the file system and does not create a new episode_v1."
   },
   "created_at": "2025-12-05T00:00:00Z",
   "updated_at": "2025-12-05T00:00:00Z"
