--- a/skills/skill_mova_ai_bootstrap_generate_basic/manifest.skill.json
+++ b/skills/skill_mova_ai_bootstrap_generate_basic/manifest.skill.json
@@ -1,7 +1,7 @@
 {
   "skill_id": "skill.mova_ai_bootstrap_generate_basic",
   "title": "MOVA AI bootstrap pack (basic)",
-  "description": "Генерує статичний MOVA AI bootstrap-пакет для заданої моделі/середовища (без виклику LLM). Вхід: env.mova_ai_bootstrap_generate_v1, вихід: ds.mova_ai_bootstrap_pack_v1.",
+  "description": "Generates a static MOVA AI bootstrap pack for a target model/environment (no LLM calls). Input: env.mova_ai_bootstrap_generate_v1, output: ds.mova_ai_bootstrap_pack_v1.",
   "mova_core_version": "4.0.0-core-draft-1",
   "uses_ds": [
     "ds.mova_ai_bootstrap_target_v1",
@@ -24,7 +24,7 @@
   ],
   "episode_policy": {
     "mode": "none",
-    "notes": "Не викликає зовнішні моделі і не пише епізоди."
+    "notes": "Does not call external models and does not write episodes."
   },
   "created_at": "2025-12-05T00:00:00Z",
   "updated_at": "2025-12-05T00:00:00Z"
