--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "flashslot:experiment": "node tools/flashslot_experiment_cli.mjs",
     "demo:flashslot": "node tools/flashslot_demo.mjs",
     "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs",
-    "smoke:flashslot:experiment": "node tools/flashslot_experiment_smoke_ci.mjs"
+    "smoke:flashslot:experiment": "node tools/flashslot_experiment_smoke_ci.mjs",
+    "codex:wrappers:gen": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --overwrite",
+    "codex:wrappers:check": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --check"
   },
   "dependencies": {
     "sql.js": "^1.9.0"
