--- a/docs/skills/CODEX_WRAPPERS_GENERATED.json
+++ b/docs/skills/CODEX_WRAPPERS_GENERATED.json
@@ -102,6 +102,12 @@
     "entrypoint": null
   },
   {
+    "skill_id": "station_cycle_v1",
+    "wrapper_id": "mova_station_cycle_v1",
+    "runnable": true,
+    "entrypoint": "skills/station_cycle_v1/impl/bindings/run_station_cycle.js"
+  },
+  {
     "skill_id": "wf_cycle_compute_compare_basic",
     "wrapper_id": "mova_wf_cycle_compute_compare_basic",
     "runnable": true,
