--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ executors/cloudflare_worker_gateway_v0/worker/wrangler.dev.jsonc
 lab/flashslot_runs/
 lab/episodes/
 lab/repo_snapshot_runs/
+lab/secrets/
 
 
 # local test tmp
@@ -44,4 +45,5 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 /artifacts/run_gates/*
 !/artifacts/run_gates/.gitkeep
 /artifacts/station_cycle/**
+/artifacts/finish_branch/**
 tmp_station_cycle_request.json
