--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,7 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 !/artifacts/run_gates/.gitkeep
 /artifacts/station_cycle/**
 /artifacts/finish_branch/**
+/artifacts/flashslot_publish/**
+/artifacts/cloudflare_memory_prod/**
+docs/examples/flashslot_publish_offer_request_real.json
 tmp_station_cycle_request.json
