--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,6 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 /artifacts/finish_branch/**
 /artifacts/flashslot_publish/**
 /artifacts/cloudflare_memory_prod/**
+/artifacts/invoice_ap/**
 docs/examples/flashslot_publish_offer_request_real.json
 tmp_station_cycle_request.json
