--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "flashslot:publish": "node packs/flashslot_v0/runtime/impl/publish_offer_v0.mjs",
     "flashslot:experiment": "node tools/flashslot_experiment_cli.mjs",
     "demo:flashslot": "node tools/flashslot_demo.mjs",
-    "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs",
     "smoke:flashslot:experiment": "node tools/flashslot_experiment_smoke_ci.mjs",
     "codex:wrappers:gen": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --overwrite",
-    "codex:wrappers:check": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --check"
+    "codex:wrappers:check": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --check",
+    "attempt:invoice:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_intake_a.json --label ide"
   },
   "dependencies": {
     "sql.js": "^1.9.0"
