--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,6 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 /artifacts/invoice_ap/**
 /artifacts/invoice_ap_**/
 /artifacts/attempts/**
+/artifacts/quality/**
 docs/examples/flashslot_publish_offer_request_real.json
 tmp_station_cycle_request.json
