--- a/docs/skills/CODEX_WRAPPERS_GENERATED.json
+++ b/docs/skills/CODEX_WRAPPERS_GENERATED.json
@@ -2,8 +2,8 @@
   {
     "skill_id": "code_exec_task_basic",
     "wrapper_id": "mova_code_exec_task_basic",
-    "runnable": false,
-    "entrypoint": null
+    "runnable": true,
+    "entrypoint": "tools/run_code_exec.js"
   },
   {
     "skill_id": "connector_scaffolder_basic",
