--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "attempt:invoice:export:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_a.json --label ide",
     "attempt:invoice:export:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_b.json --label cli",
     "quality:invoice_ap": "node tools/quality_report_v0.mjs --scope invoice_ap",
-    "quality:invoice_ap:neg": "node tools/quality_report_v0.mjs --scope invoice_ap --negative"
+    "quality:invoice_ap:neg": "node tools/quality_report_v0.mjs --scope invoice_ap --negative",
+    "quality:gateway": "node tools/quality_gateway_v0.mjs",
+    "quality:gateway:neg": "node tools/quality_gateway_v0.mjs --negative"
   },
   "dependencies": {
     "sql.js": "^1.9.0"
