feat(gateway): add signed probe route (200) + quality case

--- a/executors/cloudflare_worker_gateway_v0/worker/wrangler.jsonc
+++ b/executors/cloudflare_worker_gateway_v0/worker/wrangler.jsonc
@@ -5,7 +5,8 @@
   "name": "mova-tool-gateway-v0",
   "main": "src/index.ts",
   "compatibility_date": "2024-12-17",
-  
+  "compatibility_flags": ["nodejs_compat"],
+
   // Development server port
   "dev": {
     "port": 8787
