feat: add episode store e2e smoke (skip-by-default, dev pass, search verify)

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "invoice_mvp:compare": "node tools/attempt_compare.mjs --a ide --b cli",
     "quality:invoice_mvp_sevdesk": "node tools/quality_invoice_mvp_sevdesk_v0.mjs",
     "quality:invoice_mvp_sevdesk:neg": "node tools/quality_invoice_mvp_sevdesk_v0.mjs negative",
-    "smoke:invoice_gateway_e2e": "node tools/smoke_invoice_gateway_e2e_v0.mjs"
+    "smoke:invoice_gateway_e2e": "node tools/smoke_invoice_gateway_e2e_v0.mjs",
+    "smoke:episode_store_e2e": "node tools/smoke_episode_store_e2e_v0.mjs"
   },
   "dependencies": {
     "sql.js": "^1.9.0"
