--- a/packs/mcda_matrix_v0/ds/ds.mcda_method_config_v1.json
+++ b/packs/mcda_matrix_v0/ds/ds.mcda_method_config_v1.json
@@ -6,28 +6,36 @@
   "type": "object",
   "additionalProperties": false,
   "required": [
+    "method_version",
     "method",
     "normalization",
     "auto_normalize"
   ],
   "properties": {
+    "method_version": {
+      "type": "string",
+      "enum": [
+        "v0"
+      ],
+      "description": "Contract version of the method configuration."
+    },
     "method": {
       "type": "string",
       "enum": [
         "WSM"
       ],
-      "description": "Weighted Sum Model."
+      "description": "Weighted Sum Model (v0 only)."
     },
     "normalization": {
       "type": "string",
       "enum": [
         "MIN_MAX"
       ],
-      "description": "Normalization strategy applied before scoring."
+      "description": "Normalization strategy applied before scoring (v0 only)."
     },
     "auto_normalize": {
       "type": "boolean",
-      "description": "If true, normalize values automatically based on criterion kind."
+      "description": "If true, normalize values automatically based on criterion kind (v0 only)."
     },
     "score_precision": {
       "type": "integer",
