--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
   },
   "devDependencies": {
     "ajv": "^8.17.0",
-    "ajv-formats": "^3.0.1"
+    "ajv-formats": "^3.0.1",
+    "@modelcontextprotocol/sdk": "^1.17.0",
+    "zod": "^3.25.76"
   },
   "packageManager": "npm@11.6.2",
   "engines": {
