--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: "22"
           cache: npm
+      - run: npm install -g npm@11.6.2
       - run: npm ci
       - run: npm run validate
       - run: npm test
@@ -43,6 +44,7 @@ jobs:
         with:
           node-version: "22"
           cache: npm
+      - run: npm install -g npm@11.6.2
       - run: npm ci
       - run: npm ci --prefix pults/inngest_wf_cycle_v0
       - run: npm run smoke:pult
