--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ajv": "^8.17.0",
     "ajv-formats": "^3.0.1",
     "@modelcontextprotocol/sdk": "^1.17.0",
+    "hono": "4.11.3",
     "zod": "^3.25.76"
   },
   "packageManager": "npm@11.6.2",
