--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "validate": "node tools/validate_lab.js",
     "test": "npm run validate && node skills/skill_ingest_run_with_skillseeker_basic/tests/run_tests.js && node skills/skill_ingest_store_episode_basic/tests/run_tests.js && node skills/skill_mova_ai_bootstrap_generate_basic/tests/run_tests.js && node lab/tools/tests/mova_ai_bootstrap_apply_profile.test.js && node skills/skill_file_cleanup_snapshot_node_basic/tests/run_tests.js && node skills/skill_file_cleanup_plan_node_basic/tests/run_tests.js",
+    "ship:agent": "node tools/agent_ship_job_v0.mjs",
+    "deploy:vercel:v0": "node tools/vercel_deploy_v0.mjs",
+    "deploy:cf_worker:v0": "node tools/cf_worker_deploy_v0.mjs",
     "smoke:wf_cycle": "node tools/wf_cycle_smoke_ci.mjs",
     "smoke:flashslot": "node tools/flashslot_smoke_ci.mjs",
     "smoke:flashslot:pack": "node tools/flashslot_pack_smoke_ci.mjs",
