feat: add agent_template_v0 pack (claude code engine) + quality

--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "quality:gateway:neg": "node tools/quality_gateway_v0.mjs --negative",
     "quality:mcda_matrix": "node tools/quality_mcda_matrix_v0.mjs",
     "quality:mcda_matrix:neg": "node tools/quality_mcda_matrix_v0_neg.mjs",
+    "demo:agent_template": "node packs/agent_template_v0/tools/demo_agent_template_v0.mjs",
+    "quality:agent_template": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs",
+    "quality:agent_template:neg": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs --mode negative",
     "invoice_mvp:create_send:a": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label ide",
     "invoice_mvp:create_send:b": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label cli",
     "invoice_mvp:compare": "node tools/attempt_compare.mjs --a ide --b cli",
