feat: agent_template ship flow + claude commands + station step

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 /artifacts/smoke/**
 docs/examples/flashslot_publish_offer_request_real.json
 tmp_station_cycle_request.json
+tmp_station_cycle_*.json
