--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "demo:agent_template": "node packs/agent_template_v0/tools/demo_agent_template_v0.mjs",
     "quality:agent_template": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs",
     "quality:agent_template:neg": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs --mode negative",
+    "ship:agent_template": "node packs/agent_template_v0/tools/ship_agent_template_v0.mjs",
     "invoice_mvp:create_send:a": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label ide",
     "invoice_mvp:create_send:b": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label cli",
     "invoice_mvp:compare": "node tools/attempt_compare.mjs --a ide --b cli",
