--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "quality:mcda_matrix": "node tools/quality_mcda_matrix_v0.mjs",
     "quality:mcda_matrix:neg": "node tools/quality_mcda_matrix_v0_neg.mjs",
     "demo:agent_template": "node packs/agent_template_v0/tools/demo_agent_template_v0.mjs",
+    "demo:agent_runner": "node packs/agent_runner_v0/tools/demo_agent_runner_v0.mjs",
     "quality:agent_template": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs",
     "quality:agent_template:neg": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs --mode negative",
     "ship:agent_template": "node packs/agent_template_v0/tools/ship_agent_template_v0.mjs",
+    "quality:agent_runner": "node packs/agent_runner_v0/tools/quality_agent_runner_v0.mjs",
     "invoice_mvp:create_send:a": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label ide",
     "invoice_mvp:create_send:b": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label cli",
     "invoice_mvp:compare": "node tools/attempt_compare.mjs --a ide --b cli",
