feat(agent_factory): add agent_profile_v0 pack

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ skills/skill_ingest_run_with_skillseeker_basic/tests/tmp*/
 docs/examples/flashslot_publish_offer_request_real.json
 tmp_station_cycle_request.json
 tmp_station_cycle_*.json
+
+# Agent artifacts
+artifacts/agent_template/
+artifacts/agent_runner/
+artifacts/agent_profile/
