docs+tools: define attempts+compare as Proof of Invariance

--- a/skills/wf_cycle_compute_compare_basic/manifest.skill.json
+++ b/skills/wf_cycle_compute_compare_basic/manifest.skill.json
@@ -1,7 +1,7 @@
 {
   "skill_id": "skill.wf_cycle_compute_compare_basic",
   "title": "WF cycle compute+compare (basic)",
-  "description": "Deterministically compare two wf_cycle v1.1 runs (IDE vs CLI): compute metrics, compute score, pick winner, and write a compare folder with canonical artifacts.",
+  "description": "Deterministically compare wf_cycle runs as a Proof of Invariance step: compute metrics, score the double-run, and write canonical compare artifacts for the result_core outputs.",
   "mova_core_version": "4.0.0-core-draft-1",
   "uses_ds": [
     "ds.episode_v1",
