--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "probe:behavior": "node tools/behavior_probe_v0.mjs",
     "codex:wrappers:gen": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --overwrite",
     "codex:wrappers:check": "node tools/generate_codex_wrappers.mjs --skills skills --out .codex/skills --report docs/skills/CODEX_WRAPPERS_GENERATED.json --check",
-    "attempt:invoice:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_intake_a.json --label ide",
-    "attempt:invoice:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_intake_b.json --label cli",
-    "attempt:invoice:match_po:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_match_po_a.json --label ide",
-    "attempt:invoice:match_po:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_match_po_b.json --label cli",
-    "attempt:invoice:approve:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_approve_schedule_a.json --label ide",
-    "attempt:invoice:approve:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_approve_schedule_b.json --label cli",
-    "attempt:invoice:export:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_a.json --label ide",
-    "attempt:invoice:export:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_b.json --label cli",
+    "attempt:invoice:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_intake_a.json --label primary",
+    "attempt:invoice:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_intake_b.json --label repeat",
+    "attempt:invoice:match_po:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_match_po_a.json --label primary",
+    "attempt:invoice:match_po:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_match_po_b.json --label repeat",
+    "attempt:invoice:approve:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_approve_schedule_a.json --label primary",
+    "attempt:invoice:approve:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_approve_schedule_b.json --label repeat",
+    "attempt:invoice:export:a": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_a.json --label primary",
+    "attempt:invoice:export:b": "node tools/attempt_run.mjs --config docs/examples/attempt_invoice_payment_export_b.json --label repeat",
     "quality:invoice_ap": "node tools/quality_report_v0.mjs --scope invoice_ap",
     "quality:invoice_ap:neg": "node tools/quality_report_v0.mjs --scope invoice_ap --negative",
     "quality:gateway": "node tools/quality_gateway_v0.mjs",
@@ -70,8 +70,8 @@
     "quality:agent_template:neg": "node packs/agent_template_v0/tools/quality_agent_template_v0.mjs --mode negative",
     "ship:agent_template": "node packs/agent_template_v0/tools/ship_agent_template_v0.mjs",
     "quality:agent_runner": "node packs/agent_runner_v0/tools/quality_agent_runner_v0.mjs",
-    "invoice_mvp:create_send:a": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label ide",
-    "invoice_mvp:create_send:b": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label cli",
+    "invoice_mvp:create_send:a": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label primary",
+    "invoice_mvp:create_send:b": "node tools/attempt_run.mjs --config packs/invoice_mvp_sevdesk_v0/examples/create_send_dry_run.json --label repeat",
     "invoice_mvp:compare": "node tools/attempt_compare.mjs --a ide --b cli",
     "quality:invoice_mvp_sevdesk": "node tools/quality_invoice_mvp_sevdesk_v0.mjs",
     "quality:invoice_mvp_sevdesk:neg": "node tools/quality_invoice_mvp_sevdesk_v0.mjs negative",
